next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk, 6.1-dev, future 6.2): 
-------------------------------------------------

- Added vector field rendering (#4094)

- Add wms dimensions support (#3466)

- Fixed segfault when calling classObj::updateFromString() with SYMBOL (#4062)

- Use a renderer native follow text implementation if available.

- Fixed layer with inline feature to support multiple classes (#4070)

- Add support for rfc45 anchorpoint on marker symbols (#4066)

- Add initial gap support for line marker symbols (#3879)

- Fix center to center computation of gaps for line marker symbols
  and polygon tile patterns (#3867)

- Add initial gap support for line patterns (#3879)

- Fixed grid of thin lines in polygon symbol fills (#3868)

- Fixed cannot add a style to a label in PHP/SWIG Mapscript (#4038)

- Fixed schema validity issue for WCS 1.1 GetCoverage responses (#4047)

- remove default compiler search paths from the GD CFLAGS/LDFLAGS (#4046)

- Fixed Python Mapscript does not write COLOR to reference map (#4042)

- Added XMP support for metadata embedding, RFC 76, (#3932)

- Added GetLegendGraphic Cascading support (#3923)

- Rewrite  postgres TIME queries to take advantage of indexes (#3374)

- Unified OWS requests and applied to WCS (defaults to version 2.0 now) (#3925)

- WCS 1.0: Fix crash with some _rangeset_axes values (#4020)

- WCS 2.0: Adjusted offset vector and origin (#4006)

- Added addParameter() method to MapScript (#3973)

- Changed msDrawVectorLayer() not to cache shapes if attribute binding is present after	the first style	(#3976)

- Fix mapscript to build when TRUE macro is not defined (#3926)

- Fix mapscript php build issues with MSVC (#4004)

- PHP MapScript is missing many styleObj properties (#3901)
