@@ -254,7 +254,6 @@ int msInitializeDummyRenderer(rendererVTableObj *renderer) {
     renderer->cleanup = &cleanupDummy;
     renderer->startShape = NULL;
     renderer->endShape = NULL;
-    renderer->renderPolygonHatched = NULL;
     return MS_SUCCESS;
 }
 
